# bootc-migrate-composefs

./: .gitignore  2026-06-15-073745-read-hamdoffmd-and-complete-omplementation-and-t.txtsagbb  2026-06-15-122535-read-hamdoffmd-and-complete-omplementation-and-t.txttestst.s  AGENTS.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  Containerfile  Containerfile.lvm  Containerfile.xfs  HANDOFF.md  README.md  ROADMAP.md  SPECIFICATION.md  build.rs  context.md  deny.toml  justfile  ovmf_vars.fd  research.md  status.md  watcher.sh
.claude/: settings.local.json
.github/workflows/: ci.yml  e2e-single.yml  e2e-tests.yml  release.yml  upstream-drift-canary.yml
.pi/goals/: active_goal_2026061501052811_mqe6p56c-9g0wgf.md  goal_events.jsonl
.pi/goals/archived/: goal_2026061520000718_mqe6p56c-9g0wgf.md  goal_2026061611020460_mqe6p56c-9g0wgf.md
crates/bootc-migrate/: Cargo.toml
crates/bootc-migrate-composefs/: Cargo.toml
crates/bootc-migrate-composefs/src/: main.rs  tui.rs
crates/bootc-migrate-core/: Cargo.toml
crates/bootc-migrate-core/src/: boot_audit.rs  composefs.rs  composefs_native.rs  de_migrate.rs  lib.rs  mergetc.rs  motd.rs  reflink.rs  registry.rs  remap.rs  scan.rs  transaction.rs
crates/bootc-migrate-core/src/migration/: boot.rs  deploy.rs  kernel_options.rs  mod.rs  pull.rs  rollback.rs
crates/bootc-migrate-core/src/migration/bootloader/: mod.rs  systemd_boot.rs
crates/bootc-migrate-core/src/preflight/: mod.rs  readiness.rs  system_info.rs  validate.rs
crates/bootc-migrate/src/: main.rs  tui.rs
crates/bootc-rebase/: Cargo.toml
crates/bootc-rebase/src/: main.rs  routing.rs
docs/: architecture.md  cfs-cli-generations.md  filesystem-support.md  luks-testing.md  references.md  testing.md
docs/reproduction-evidence/: 01-switch-root-failure-log.txt  02-fix-verified.txt  03-live-vm-verification.txt  04-detection-evidence.txt
etc/dbus-1/: system.conf
scripts/: capture-screenshots.sh
src/: composefs.rs  lib.rs  main.rs  mergetc.rs  migration.rs  motd.rs  ostree.rs  preflight.rs  reflink.rs  registry.rs  transaction.rs  tui.rs  types.rs  xattr.rs
src/migration/: deploy.rs  esp.rs  import.rs  kernel_options.rs  mod.rs  os_release.rs  phase0.rs  phase4.rs  phase5.rs  pull.rs  registry.rs  seal.rs  verify.rs
src/migration/bootloader/: grub.rs  mod.rs
src/preflight/: mod.rs  validate.rs
tests/: canary-baseline.tsv  drift-canary.sh  run-e2e.sh
