[package]
name = "bootc-migrate-composefs"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "In-place migration from OSTree-backed to composefs-backed bootc systems"
repository = "https://github.com/hanthor/bootc-migrate-composefs"
readme = "README.md"
rust-version = "1.88.0"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
sha2 = "0.10"
rustix = { version = "1", features = ["fs", "process", "pipe", "stdio"] }
tempfile = "3.8"
tini = "1.3.0"
ratatui = { version = "0.30.2", default-features = false, features = ["crossterm"] }
crossterm = "0.29.0"

[lints.rust]
unsafe_code = "deny"
unused_must_use = "forbid"
missing_debug_implementations = "deny"

[lints.clippy]
dbg_macro = "deny"
todo = "deny"

# Smaller, faster release binaries for distribution.
[profile.release]
strip = true
lto = "thin"
