[package]
name = "bootc-migrate-core"
description = "Building blocks for in-place bootc backend migrations: composable phases, registry streaming, /etc merge, preflight, two-phase commit/undo"
readme = "../../README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
sha2.workspace = true
rustix.workspace = true
tempfile.workspace = true
tini.workspace = true

[lints]
workspace = true
