[package]
name = "bootc-migrate-core"
description = "Building blocks for in-place bootc backend migrations: composable phases, registry streaming, /etc merge, preflight, two-phase commit/undo"
readme = "../../README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
sha2.workspace = true
rustix.workspace = true
tempfile.workspace = true
tini.workspace = true
composefs = { version = "0.7", optional = true }
composefs-oci = { version = "0.7", optional = true }
tokio = { version = "1", features = ["rt"], optional = true }

[lints]
workspace = true

[features]
# Native composefs-rs store backend (issue #13): writes the store with the
# composefs/composefs-oci crates instead of shelling out to `bootc internals
# cfs`. Off by default — the MVP binary keeps the CLI-driven store.
composefs-native = ["dep:composefs", "dep:composefs-oci", "dep:tokio"]
