[package]
name = "bootc-rebase"
description = "Universal bootc re-base engine: migrate a bootc system between backends, bootloaders, and images (scaffold)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
bootc-migrate-core.workspace = true
clap.workspace = true
anyhow.workspace = true
rustix.workspace = true

[lints]
workspace = true
